force-app/main/default/objects/Answer__c/fields/Count_Vote__c.field-meta.xml
<CustomField>
    <fullName>Count_Vote__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count Vote</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>