force-app/main/default/objects/Answer__c/fields/Is_Best_Answer__c.field-meta.xml
<CustomField>
    <fullName>Is_Best_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Best Answer</label>
    <type>Checkbox</type>
</CustomField>